# nails

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yml
src/: lib.rs  main.rs
src/clients/: auth.rs
src/middleware/: mod.rs  request.rs  request_body_log.rs  request_id.rs  response.rs  response_body_log.rs
src/model/: account.rs  device.rs  external_id.rs  mod.rs  profile.rs
src/routes/: create_account.rs  get_account.rs  get_account_profile.rs  get_accounts.rs  get_device_profile.rs  mod.rs  update_account.rs
src/routes/admin/: health.rs  mod.rs  ping.rs  set_time.rs  settings.rs  tracer.rs
src/utils/: config.rs  context.rs  errors.rs  http.rs  mod.rs  mongo.rs  rabbit.rs
src/utils/wip/: dbupdates.wip  patch.wip
tests/: account_tests.rs
tests/common/: mod.rs  shared.rs
tests/common/docker/: mod.rs  mongo.rs  rabbit.rs
utils/: test.http
utils/wiremock/: ping.json  validate_claim.json
