[package]
name = "nails"
version = "0.1.0"
authors = ["Stef <stefan.bolton+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The binary is a lib wrapped as a binary - this allows us to write integration tests that can create
# and initialise the app using the same code used in the binary.
[lib]
name = "nails"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "nails"
path = "src/main.rs"
test = false            # Don't run doctests.

[dependencies]
# For Tracing.
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

# For Config.
dotenv = "0.15.0"
config = "0.11.0"
ansi_term = "0.12.1"

# For Mongo.
mongodb = "1.2.2"
bson = "1.2.2"
uuid = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"

# For Web.
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-service = "1.0.6"
serde = "1.0.126"
serde_json = "1.0.64"
serde_with = "1.9.1"
derive_more = "0.99.14"

# For Wabbit.
lapin = "1.7.1"
tokio-amqp = "1.0.0"
tokio = "0.2.6"
crossbeam-channel = "0.5.1"
backoff = "0.3.0"

# For Rest-calls
url = "2.2.1"

# Open-telemetry and jaeger
actix-web-opentelemetry = { version = "0.9.0", features = [ "metrics" ] }
opentelemetry-prometheus = "0.4.0"
opentelemetry = { version = "0.11.2", features = ["tokio"] }
opentelemetry-jaeger = { version = "0.10.0", features = ["tokio"] }
tracing-opentelemetry = "0.10.0"

# Misc
lazy_static = "1.4.0"
actix-rt = "1.1.1"
pin-project = "0.4"
itertools = "0.10.0"
parking_lot = "0.11.1"

[dev-dependencies]
env_logger = "0.8.4"
testcontainers = "0.12.0"
assert-json-diff = "2.0.1"
mockito = "0.30.0"